@@ -405,6 +405,14 @@ void LayoutLine::printYourself(wxDC& dc, const int x0, const int y0, const int x
 
     std::cout << "last_of_page=" << last_of_page << std::endl;
 
+    // draw vertical grey lines to show these lines belong toghether
+    if(trackAmount>1)
+    {
+        dc.SetPen(  wxPen( wxColour(150,150,150), 3 ) );
+        dc.DrawLine( x0+3, y0, x0+3, y0+height-150); // FIXME - 150 is an arbitrary number to fit the margin under tracks
+        dc.DrawLine( x1-3, y0, x1-3, y0+height-150);
+    }
+    
     float current_y = y0;
     for(int n=0; n<trackAmount; n++)
     {
@@ -415,14 +423,6 @@ void LayoutLine::printYourself(wxDC& dc, const int x0, const int y0, const int x
         const float track_height = height * height_percent[n]/100.0f;
 
         std::cout << "* allocating " <<track_height << " out of " << height << " (" << height_percent[n] << "%)" << std::endl;
-
-        // draw vertical grey lines to show these measures belong toghether
-        if(n>1)
-        {
-            dc.SetPen(  wxPen( wxColour(150,150,150), 3 ) );
-            dc.DrawLine( x0+3, y0, x0+3, y1);
-            dc.DrawLine( x1-3, y0, x1-3, y1);
-        }
 
         track->drawLine(*this, dc, x0, current_y, x1,
                         current_y+(track_height-220),
