@@ -7,6 +7,7 @@
 - Fixed docking tracks, which was broken in last release
 - Made 'follow playback' easier to follow by scrolling only on measure change
 - Fixed undoing guitar tuning changes
+- When printing multiple tracks, draw a line between them to make clear they belong toghether
 
 1.2b3
 - Refactored preferences to look better, be cleaner and allow setting a default value for "follow playback"
